--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />      
     <title>Bookshelf</title>    
-    <link rel="stylesheet"
-          href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <link href="https://bootswatch.com/4/journal/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+SC" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
